--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
 
     <!--AndroidManifest -->
-    <string name="app_name">El Perù Primero</string>
+    <string name="app_name">LPS</string>
     <!--activity main -->
-    <string name="mensaje"> Entérate de lo que está pasando en el Perù y en el mundo en este momento </string>
+    <string name="mensaje"> Sistema de planeación, logística y recursos humanos </string>
     <string name="crear_cuenta"> Crear cuenta </string>
     <string name="tienes_cuenta">Ya tienes cuenta ?</string>
     <string name="iniciar_sesiòn">Iniciar sesiòn</string>
